# starcraft-file-extractor-macos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: extract_audio.cpp
